visually constructed and styled the project/create page... also made a mistake and messed up code I'd writtn on projects/edit-project (check this tomorrow)

--- a/app/views/projects/create_project.erb
+++ b/app/views/projects/create_project.erb
@@ -1,27 +1,123 @@
 
+
 <style> 
 body{
 background-color: #ffa834;
 color: white;
 font-family: 'Audiowide', cursive;
+
 }
+
+#try-box {
+  display: none;
+}
+
+  #box {
+    text-align:center;
+    position:fixed;
+    left:29px;
+    top:90px;
+    width:219px;
+    height:310px;
+    font-size: 120px;
+    letter-spacing: 20px;
+    font-style: italic;
+    font-weight:bold;
+    line-height: .85;
+  } 
+
+ 
+  
+  #plus-sign {
+    position:fixed;
+    left:786px;
+    top:458px;
+    width:282px;
+    height:188px;
+    transform:scale(2);
+    transform-origin:141px 94px;
+  }
+
+  #plus-sign:focus {
+    border-color: transparent;
+  }
+
+  #return {
+    position:fixed;
+    left:340px;
+    top:400px;
+    width:680px;
+    height:20px;
+    font-size: 25px;
+    font-style:italic;
+    letter-spacing: 3px;
+    background-color: rgba(255, 168, 52, 0.02);
+    color:#ff3823;
+    font-family: Audiowide;
+    z-index: 4;
+
+  }
+
+  #return a {
+    text-decoration: none;
+    color:white;
+  }
+
+  #title {
+    position:fixed;
+    padding-left: 10px;
+    left:280px;
+    top:210px;
+    width:742px;
+    height:107px;
+    font-size: 25px;
+    line-height: 1.3;
+    font-style:italic;
+    border-bottom:2px solid white;
+    background-color: #ffa834;
+    color:white;
+    font-family: Audiowide;
+    border-style:solid solid solid solid;
+    border-radius: 20px 20px 20px 20px;
+  }
+  #title::-webkit-input-placeholder{
+    color:white;
+  }
+
+  #title::-moz-placeholder {
+    color:white;
+  }
+
+  #title:-moz-placeholder {
+    color:white;
+  }
+  #title:-ms-input-placeholder {
+    color: white;
+  }
+
+
 </style>
 
+<div id="box">h<br>w</div>
 
-<h2>Create Project</h2>
-
-
+<div id="return"><a href="/projects">return to list of projects</a></div>
 
 
 <form method="post" action="/projects">
-  <input type="text" name="title" placeholder="title"><br>
   
- 
-  <input type="submit" id="submit" value="submit" class= "btn btn-primary">
+  <input id="title" type="text" name="title" placeholder="title"><br>
 
-
-
-
+  <input type="image" id="plus-sign" value="submit" src="/images/plus.svg">
 </form>
 
-<a href="/projects">HW (return to list of projects)</a>
+
+
+
+
+
+
+
+
+
+
+
