--- a/app/views/projects/edit_project.erb
+++ b/app/views/projects/edit_project.erb
@@ -1,4 +1,78 @@
-<h2>Project Edit</h2>
+
+<style> 
+body{
+background-color: #ffa834;
+color: white;
+font-family: 'Audiowide', cursive;
+
+}
+
+#subtitle {
+    margin-top: 40px;
+    text-align:center;
+    position:fixed;
+    font-size:18px;
+    letter-spacing:15px;
+    left:48px;
+    top:270px;
+    width:1164px;
+    height:116px;
+    color:white;
+    z-index: 6;
+  }
+
+  #box {
+    text-align:center;
+    position:fixed;
+    left:29px;
+    top:19px;
+    width:219px;
+    height:310px;
+    font-size: 120px;
+    letter-spacing: 20px;
+    font-style: italic;
+    font-weight:bold;
+  } 
+
+  #h {
+
+  }
+
+  #w {
+    
+  }
+  
+  #plus-sign {
+    position:fixed;
+    left:786px;
+    top:458px;
+    width:282px;
+    height:188px;
+    transform:scale(2);
+    transform-origin:141px 94px;
+  }
+
+  #plus-sign:focus {
+    border-color: transparent;
+  }
+
+
+
+
+
+
+
+
+
+
+
+
+</style>
+<div id="box"><div id="h">h</div><br><div id="w">w</div>
+  <div id="subtitle"> COLLABORATIVE COMPOSITION PLATFORM</div>
+  <div id="sign-up"><a href="/signup">OR SIGN-UP</a></div>
+
+<div>Project Edit</div>
 <form method="post" action="/projects/<%= @project.id %>">
   
   <input id="hidden" type="hidden" name="_method" value="PATCH">
