figured out that the add a new project feature under the plus sign on the view I just worked on was bringing in all the params, when I only needed title, and it was not working. Changed the route to title: params[:title], and then found out I have two post routes for create a project. I will fix this tomorrow.

--- a/app/views/projects/create_project.erb
+++ b/app/views/projects/create_project.erb
@@ -28,7 +28,7 @@ font-family: 'Audiowide', cursive;
 
  
   
-  #plus-sign {
+  #plus {
     position:fixed;
     left:786px;
     top:458px;
@@ -38,7 +38,7 @@ font-family: 'Audiowide', cursive;
     transform-origin:141px 94px;
   }
 
-  #plus-sign:focus {
+  #plus:focus {
     border-color: transparent;
   }
 
@@ -107,7 +107,7 @@ font-family: 'Audiowide', cursive;
   
   <input id="title" type="text" name="title" placeholder="title"><br>
 
-  <input type="image" id="plus-sign" value="submit" src="/images/plus.svg">
+  <input type="image" id="plus" src="/images/plus.svg">
 </form>
 
 
