--- a/app/views/projects/create_project.erb
+++ b/app/views/projects/create_project.erb
@@ -105,9 +105,12 @@ font-family: 'Audiowide', cursive;
 
 <form method="post" action="/projects">
   
+  <!-- this is the title input field -->
   <input id="title" type="text" name="title" placeholder="title"><br>
 
+  <!-- this is the plus-sign that enters a project into the database -->
   <input type="image" id="plus" src="/images/plus.svg">
+
 </form>
 
 
