--- a/app/views/oldchunks/create_oldchunk.erb
+++ b/app/views/oldchunks/create_oldchunk.erb
@@ -4,23 +4,153 @@ background-color: #ffa834;
 color: white;
 font-family: 'Audiowide', cursive;
 }
+
+#try-box {
+  display: none;
+}
+
+
+#box {
+    text-align:center;
+    position:fixed;
+    left:29px;
+    top:90px;
+    width:219px;
+    height:310px;
+    font-size: 120px;
+    letter-spacing: 20px;
+    font-style: italic;
+    font-weight:bold;
+    line-height: .85;
+  } 
+
+#plus {
+    position:fixed;
+    left:786px;
+    top:458px;
+    width:282px;
+    height:188px;
+    transform:scale(2);
+    transform-origin:141px 94px;
+  }
+
+#plus:focus {
+    border-color: transparent;
+  }
+
+#sreturn {
+    position:fixed;
+    left:340px;
+    top:555px;
+    width:680px;
+    height:20px;
+    font-size: 25px;
+    font-style:italic;
+    letter-spacing: 3px;
+    background-color: rgba(255, 168, 52, 0.02);
+    color:#ff3823;
+    font-family: Audiowide;
+    z-index: 4;
+
+  }
+
+#sreturn a {
+    text-decoration: none;
+    color:white;
+  }
+
+#title {
+    position:fixed;
+    padding-left: 10px;
+    left:280px;
+    top:110px;
+    width:742px;
+    height:107px;
+    font-size: 25px;
+    line-height: 1.3;
+    font-style:italic;
+    border-bottom:2px solid white;
+    background-color: #ffa834;
+    color:white;
+    font-family: Audiowide;
+    border-style:solid solid solid solid;
+    border-radius: 20px 20px 20px 20px;
+  }
+
+  #title::-webkit-input-placeholder{
+    color:white;
+  }
+
+  #title::-moz-placeholder {
+    color:white;
+  }
+
+  #title:-moz-placeholder {
+    color:white;
+  }
+  #title:-ms-input-placeholder {
+    color: white;
+  }
+
+#scene-text {  position:fixed;
+    padding-left: 10px;
+    left:280px;
+    top:267px;
+    width:742px;
+    height:222px;
+    font-size: 25px;
+    line-height: 1.3;
+    font-style:italic;
+    border:2px solid white;
+    background-color: #ffa834;
+    color:white;
+    font-family: Audiowide;
+    border-style:solid solid solid solid;
+    border-radius: 20px 20px 20px 20px;
+  }
+
+  #scene-text::-webkit-input-placeholder{
+    color:white;
+  }
+
+  #scene-text::-moz-placeholder {
+    color:white;
+  }
+
+  #scene-text:-moz-placeholder {
+    color:white;
+  }
+  #scene-text:-ms-input-placeholder {
+    color: white;
+  }
+
+
+
+
+
+
 </style>
 
 
-<h2>Create Scene</h2>
 
 
+<div id="box">h<br>w</div>
+
+<div id="sreturn"><a href="/<%=@project.pslug%>/index">scene index</a></div>
 
 
 <form method="post" action="/oldchunks">
-  <input type="text" name="title" placeholder="title"><br>
-  <textarea type="text" name="text" placeholder="text"></textarea><br>
- 
-  <input type="submit" id="submit" value="submit" class= "btn btn-primary">
-
   
-
+  <!-- this is the title input field -->
+  <input id="title" type="text" name="title" placeholder="title"><br>
+  
+ <!-- this is the text of the scene input field -->
+  <textarea id="scene-text" type="text" name="text" placeholder="text"></textarea><br>
+ 
+ <!-- this is the plus-sign that enters a scene into the database -->
+  <input type="image" id="plus" src="/images/plus.svg">
+  
+  <!-- this is the way we pass the current project into the controller so it gets saved into the database correctly- with the newly created oldchunk -->
   <input type="hidden" name="project_id" value="<%=@project.id%>">
 </form>
 
-<h2><a href='/<%=@project.pslug%>/index'>SHOW ME THE SCENE INDEX</a></h2>
