went nuts trying to fix the newchunks show page. Had to undo all my useless wrappers and columns and make every element independent. This works much better. Computer overheated, so wanted to commit what I had done in case of shutdown.

--- a/app/views/newchunks/show_newchunk.erb
+++ b/app/views/newchunks/show_newchunk.erb
@@ -1,6 +1,6 @@
 
 
-<style type="text/css"> 
+<style> 
 
 
 body{
@@ -16,207 +16,169 @@ body{
     text-decoration: none;
     } 
     a:link {
-      color: red;
+      color: #ff5555;
     }
     a:visited {
-      color: #ff0066;
+      color: #b66ac7;
     }
     a:hover {
       color: black;
     }
 
-    /*.header{
-     position: fixed;
-     top: -69px;
-     /*float: left;*/
-     /*left: 16px;
-     width: 1271px;
-     height:168;
-     background-color: white;
-     z-index: 5;
-     }
-           */ #p-title {
-              top: -69px;
-     /*float: left;*/
-     left: 16px;
-     width: 1271px;
-     height:168px;
-     background-color: white;
-     z-index: 5;
-            }
-              #name {
-              position:relative;
-              float: left;
-            }
-    .header::after {
-      clear:both;
-    }
-
-    .wrapper{
-     position: relative;
-     float: left;
-     left: 11px;
-     width: 1267px;
-     top:100px;
-     background-color: orange;
-     z-index: 0;
-     min-height: 600px;
-    }
-    
-
-    .left-side-title {
-      position: relative;
-       float: left;
-       left: 3px;
-       width: 98px;
-      transform:rotate(-90deg);
-              z-index: 5;
-    }
-              /*#o-title {
-              font-family: 'Audiowide', cursive;
-              font-size: 30px;
-              letter-spacing: 4px;
-              left: 2080px;
-              top: 4318px;
-              width: 344px;
-              height: 67px;
-              -webkit-transform: translateY(-100%) rotate(-90deg); 
-                -moz-transform: translateY(-100%) rotate(-90deg); 
-                /*-moz-transform-origin: right top; 
-                -ms-transform: translateY(-100%) rotate(-90deg); 
-                -o-transform: translateY(-100%) rotate(-90deg); 
-                transform: translateY(-100%) rotate(-90deg);   
-                -webkit-transform-origin: left bottom;
-                -moz-transform-origin: left bottom;
-                -ms-transform-origin: left bottom;
-                -o-transform-origin: left bottom;
-                transform-origin: left bottom;
-            }
-*/
-    .second-from-left {
-      position: relative;
-       float: left;
-       left: 9px;
-       width: 343px;
-       background-color: #fad2e0;
-
-
-       
-    }
-          #oldchunk-text {  
-          font-family: "Courier New", Courier, monospace;
-          font-size: 10px;
-          color:black;
-          left: 118px;
-          top: 60px;
-          width: 344px;
-          min-height: 250px;
-          overflow:scroll;
-        }
-
-            .icon-box{
-            position:fixed;
-            top:388px;
-            left:120px;
-            width:250px; 
-          }
-                  #video {
-                   position:relative;
-                   float: left;
-                   top:-40px;
-                   height:40px;
-                   width:40px;
-                   margin-right: 20px;
-                  }
-
-                  #image {
-                  position:relative;
-                  top:-40px;
-                  float:left;
-                  height:40px;
-                   width:40px;
-                   margin-right: 20px;
-                  }
-
-                  #sound {
-                  position:relative;
-                  top:-40px;
-                  float:left;
-                  height:40px;
-                   width:40px;
-                  }
-
-
-    .third-from-left {
-      position: relative;
-      float: left;
-      left: 15px;
-      width: 623px;
-      background-color: #ccccff
-
-    }
-              #newchunk-text {
-              font-family: "Courier New", Courier, monospace;
-              font-size: 10px;
-              color:black;
-              left: 2080px;
-              top: 318px;
-              width: 344px;
-              height: 67px;
-              overflow:scroll;
-            }
-            
-            #comment-show {
-              border: 2px solid #ff3823;
-              background-color:#fdf4f8;
-              border-radius: 10px;
-              font-size: 100%;
-              color:black;
-              width: 600px;
-              height:225px;
-              left:2622px;
-              top:4659px;
-            }
-    
-
-
-    .far-right {
-      position: fixed;
-       float: right;
-       right: 3px;
-       width: 179px;
-       background-color: yellow;
-     }
-
-    
-            
-            #side-edit{
-              font-size: 70px;
-              letter-spacing: 17px;
-              
-              top: 220px;
-              
-              height: 110px;
-              transform:rotate(-90deg);
-              z-index: 5;
-            }
-
-            
-
-            
-.footer{
-   position: relative;
-   float: left;
-   left: 10px;
-   width: 1267px;
-   height: 20px;
-   background-color: #cfcfcf
-}
-           
-
-           
    
+#p-title {
+  
+       top: -46px;
+    position: fixed;
+    /* float: left; */
+    left: 89px;
+    width: 1271px;
+    height: 121px;
+    background-color: rgba(255, 255, 255, 0);
+    font-size: 122px;
+    letter-spacing: 0px;
+    font-style: italic;
+    color: red;}
+
+#name {
+        position: fixed;
+    left: -63px;
+    font-size: 22px;
+    transform: rotate(-90deg);
+    top: 595px;
+    letter-spacing: 5px;
+    font-style: italic;}
     
+   /* .header::after {
+      clear:both;
+    }*/
+
+  #name a{
+    text-decoration: none;
+    color:white;
+  }
+      
+    #oldchunk-text {  
+    font-family: "Courier New", Courier, monospace;
+    font-size: 14px;
+    color: #d45454;
+    left: 120px;
+    top: 115px;
+    min-height: 269px;
+    overflow: scroll;
+    position: fixed;
+    right: 743px;
+  }
+  
+   
+
+#video {
+    position: fixed;
+    top: 418px;
+    height: 48px;
+    width: 40px;
+    left: 410px;
+  }
+
+  #image {
+    position: fixed;
+    top: 418px;
+    height: 48px;
+    width: 40px;
+    left: 324px;
+  }
+
+  #sound {
+  position: fixed;
+    top: 422px;
+    height: 48px;
+    width: 40px;
+    left: 247px;
+  }
+
+  #newchunk-text {
+  font-size: 45px;
+    letter-spacing: 17px;
+    top: 119px;
+    left: 1120px;
+    height: 110px;
+    transform: rotate(-90deg);
+    z-index: 4;
+    font-style: italic;
+    color: white;
+    position: fixed;
+}
+
+  #comment-show {
+    border: 1px solid #ff3823;
+    background-color: rgb(253, 244, 248);
+    border-radius: 10px;
+    font-size: 100%;
+    color: black;
+    width: 543px;
+    height: 193px;
+    left: 601px;
+    top: 337px;
+    position: fixed;
+  }
+    
+#o-title {
+    font-size: 76px;
+    color: rgba(255, 85, 85, 0.74);
+    width: 150px;
+    height: 146px;
+    left: -15px;
+    top: 347px;
+    position: fixed;
+    font-style: italic;
+    transform: rotate(-90deg);
+  }
+   #side-edit{
+      font-size: 45px;
+    letter-spacing: 17px;
+    top: 119px;
+    left: 1120px;
+    height: 110px;
+    transform: rotate(-90deg);
+    z-index: 4;
+    font-style: italic;
+    color: white;
+    position: fixed;
+    }
+
+            
+    #try-box {
+      display:none;
+    }
+            
+
+           
+
+   #score {
+  font-style: italic;
+   font-weight: bold;
+    position: fixed;
+    font-size: 86px;
+    letter-spacing: 11px;
+    left: 183px;
+    top: 578px;
+    width: 200px;
+    height: 56px;
+    
+
+}        
+   
+  .comment-text {
+    font-family: "Courier New";
+    font-style: italic;
+    position: fixed;
+    font-size: 12px;
+    letter-spacing: 1px;
+    left: 631px;
+    top: 547px;
+    width: 436px;
+    height: 56px;
+  }  
     
     
 
@@ -301,12 +263,12 @@ body{
   <!-- THE EDIT THE NEWCHUNK THINGY ON THE SIDE OF IT -->
   
   </div>
-  <div class="far-right" id="side-edit"><a href='/newchunks/<%=@newchunk.id%>/edit'>EDIT</a>
+  
+  <div id="side-edit"><a href='/newchunks/<%=@newchunk.id%>/edit'>EDIT</a>
   </div>
   
   <!-- "SCORE" CHECK OTHER WRITTEN CODE IN OLDCHUNKS/OLDCHUNKS -->
-  <div class="footer"><h2><a href="/<%=@project.pslug%>/final_map">SCORE</a></h2></div>
-  
+  <div id="score"><a href='/<%=@project.pslug%>/final_map'>SCORE</a></div>
 
 
 
